@@ -4,6 +4,13 @@
 	  Make attachment work by plugin.
 2010-05-29  hiraku <hiraku@sapporo.email.ne.jp>
 
+	* hiki/util.rb (Hiki::Util): add module functions
+	(euc_to_utf8, utf8_to_euc) for hiki/xmlrpc.rb
+	* hiki/xmlrpc.rb: use Util.utf8_to_euc,euc_to_utf8 insted of
+	Object#utf8_to_euc,euc_to_utf8
+
+2010-05-29  hiraku <hiraku@sapporo.email.ne.jp>
+
 	* hiki/util.rb (Hiki::Util): add module function (get_common_data)
 	for misc/plugin/history.rb
 
